# omeda-skittle-skill-tester

./: README.md
api/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/src/api/: config.py  llm.py  main.py  models.py  prompt.py
api/tests/: conftest.py  test_llm.py  test_main.py  test_models.py  test_prompt.py
test-skittle/: README.md  angular.json  package-lock.json  package.json
test-skittle/src/: index.html  styles.css
test-skittle/src/app/: app.html  app.routes.ts  app.spec.ts  app.ts
test-skittle/src/app/components/skill-tester/: skill-tester.html  skill-tester.ts
test-skittle/src/app/interface/: model.ts
test-skittle/src/app/services/: skill-tester.service.ts
test-skittle/src/app/utils/: field-validation.utils.ts
