[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.7",
    "langchain-openai>=1.3.3",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
api = "api.main:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
